# observer_ptr

./: .gitignore  CMakeLists.txt  README.md  observer_ptr.cbp
Example/: main.cpp
Include/: observer_ptr.hpp
Test/: main.cpp
